--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Maanya, A Journey of Love</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
@@ -21,6 +21,7 @@
             background-color: var(--background-color);
             color: var(--text-color);
             overflow-x: hidden;
+            font-size: 16px;
         }
         .section {
             height: 100vh;
@@ -32,8 +33,8 @@
         }
         .content {
             text-align: center;
-            max-width: 800px;
-            padding: 2rem;
+            max-width: 90%;
+            padding: 1.5rem;
             background: rgba(255, 255, 255, 0.8);
             border-radius: 15px;
             box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
@@ -45,18 +46,18 @@
         }
         h1 {
             font-family: 'Great Vibes', cursive;
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             color: var(--primary-color);
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
         p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
+            font-size: 1rem;
+            line-height: 1.4;
+            margin-bottom: 1rem;
         }
         .btn {
             display: inline-block;
-            padding: 12px 24px;
+            padding: 10px 20px;
             background-color: var(--primary-color);
             color: white;
             text-decoration: none;
@@ -65,12 +66,13 @@
             transition: all 0.3s ease;
             border: none;
             cursor: pointer;
-            font-size: 1.1rem;
+            font-size: 1rem;
+            -webkit-tap-highlight-color: transparent;
         }
-        .btn:hover {
+        .btn:hover, .btn:active {
             background-color: var(--secondary-color);
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         }
         .parallax-bg {
             position: absolute;
@@ -80,12 +82,12 @@
             height: 100%;
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-attachment: scroll;
         }
         .heart {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 15px;
+            height: 15px;
             background: var(--primary-color);
             transform: rotate(45deg);
             animation: heartbeat 1.5s ease-in-out infinite;
@@ -93,19 +95,19 @@
         .heart::before,
         .heart::after {
             content: '';
-            width: 20px;
-            height: 20px;
+            width: 15px;
+            height: 15px;
             background: var(--primary-color);
             border-radius: 50%;
             position: absolute;
         }
         .heart::before {
-            top: -10px;
+            top: -7.5px;
             left: 0;
         }
         .heart::after {
             top: 0;
-            left: -10px;
+            left: -7.5px;
         }
         @keyframes heartbeat {
             0% { transform: rotate(45deg) scale(0.8); }
@@ -129,10 +131,10 @@
         }
         .proposal-content {
             background: white;
-            padding: 2rem;
+            padding: 1.5rem;
             border-radius: 15px;
             text-align: center;
-            max-width: 500px;
+            max-width: 90%;
             width: 90%;
         }
         .close-btn {
@@ -142,6 +144,7 @@
             font-size: 1.5rem;
             color: white;
             cursor: pointer;
+            padding: 10px;
         }
         #confetti {
             position: fixed;
@@ -200,7 +203,7 @@
         function createParallaxEffect() {
             gsap.utils.toArray('.parallax-bg').forEach((bg, i) => {
                 gsap.to(bg, {
-                    backgroundPosition: `50% ${-innerHeight / 2}px`,
+                    backgroundPosition: `50% ${-innerHeight / 4}px`,
                     ease: "none",
                     scrollTrigger: {
                         trigger: bg,
@@ -217,12 +220,12 @@
                 gsap.to(content, {
                     opacity: 1,
                     y: 0,
-                    duration: 1,
-                    ease: "power3.out",
+                    duration: 0.8,
+                    ease: "power2.out",
                     scrollTrigger: {
                         trigger: content,
-                        start: "top 80%",
-                        end: "bottom 20%",
+                        start: "top 90%",
+                        end: "bottom 10%",
                         toggleActions: "play none none reverse"
                     }
                 });
@@ -232,13 +235,13 @@
         function createFloatingHearts() {
             const sections = document.querySelectorAll('.section');
             sections.forEach(section => {
-                for (let i = 0; i < 5; i++) {
+                for (let i = 0; i < 3; i++) {
                     const heart = document.createElement('div');
                     heart.classList.add('heart');
                     heart.style.left = `${Math.random() * 100}%`;
                     heart.style.top = `${Math.random() * 100}%`;
-                    heart.style.opacity = Math.random() * 0.5 + 0.5;
-                    heart.style.transform = `scale(${Math.random() * 0.5 + 0.5}) rotate(45deg)`;
+                    heart.style.opacity = Math.random() * 0.5 + 0.3;
+                    heart.style.transform = `scale(${Math.random() * 0.3 + 0.3}) rotate(45deg)`;
                     section.appendChild(heart);
                 }
             });
@@ -270,14 +273,14 @@
             const confetti = [];
             const colors = ['#ff6b6b', '#4ecdc4', '#45b7d1', '#f7d794', '#786fa6'];
 
-            for (let i = 0; i < 200; i++) {
+            for (let i = 0; i < 100; i++) {
                 confetti.push({
                     x: Math.random() * confettiCanvas.width,
                     y: Math.random() * confettiCanvas.height,
-                    size: Math.random() * 5 + 5,
+                    size: Math.random() * 3 + 2,
                     color: colors[Math.floor(Math.random() * colors.length)],
-                    speedY: Math.random() * 3 + 1,
-                    speedX: Math.random() * 2 - 1
+                    speedY: Math.random() * 2 + 0.5,
+                    speedX: Math.random() * 1.5 - 0.75
                 });
             }
 
